syntax = "proto3";

package auth;

service AuthService {
  rpc IntrospectToken (IntrospectTokenRequest) returns (IntrospectTokenResponse);
}

message IntrospectTokenRequest {
  string token = 1;
}

message IntrospectTokenResponse {
  bool valid = 1;
  string userId = 2;
  string username = 3;
  string role = 4;
  string error = 5;
}
